--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@editorjs/underline": "^1.0.0",
     "@quasar/cli": "^1.2.1",
     "@quasar/extras": "^1.0.0",
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "editorjs-drag-drop": "^0.2.0",
@@ -28,6 +29,7 @@
     "editorjs-text-alignment-blocktune": "^1.0.2",
     "editorjs-undo": "^0.2.0",
     "firebase": "^9.1.0",
+    "gsap": "^3.8.0",
     "page-flip": "^2.0.7",
     "quasar": "^2.0.0",
     "swiper": "^7.0.3",
