--- a/package.json
+++ b/package.json
@@ -3,48 +3,45 @@
   "version": "0.0.1",
   "description": "App where writers can write and publish their books to our platform, and readers can then purchase and read these books, all while using our innovative and immersive features.",
   "productName": "BookKay",
-  "author": "Kyaw-Thiha",
+  "author": "Kyaw Thiha",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.vue ./",
-    "test": "echo \"No test specified\" && exit 0",
-    "icons": "icongenie generate -i public/logo/BookKay.png  --theme-color FFFFFF --quality 12 ",
-    "deploy": "push-dir --dir=dist/spa --remote=gh-pages --branch=master"
+    "lint": "eslint --ext .js,.ts,.vue ./",
+    "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "@editorjs/delimiter": "^1.2.0",
     "@editorjs/editorjs": "^2.22.2",
-    "@editorjs/header": "^2.6.1",
+    "@editorjs/header": "^2.6.2",
     "@editorjs/marker": "^1.2.2",
     "@editorjs/nested-list": "^1.0.2",
     "@editorjs/paragraph": "^2.8.0",
     "@editorjs/underline": "^1.0.0",
     "@quasar/cli": "^1.2.2",
-    "@quasar/extras": "^1.12.1",
-    "aos": "^3.0.0-beta.6",
+    "@quasar/extras": "^1.0.0",
+    "aos": "^2.3.4",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "editorjs-drag-drop": "^0.2.0",
-    "editorjs-inline-image": "^0.2.0",
-    "editorjs-text-alignment-blocktune": "^1.0.2",
-    "editorjs-undo": "^0.2.0",
-    "firebase": "^9.1.0",
-    "gsap": "^3.8.0",
+    "editorjs-drag-drop": "^1.0.1",
+    "editorjs-inline-image": "^1.0.0",
+    "editorjs-text-alignment-blocktune": "^1.0.3",
+    "editorjs-undo": "^1.0.1",
+    "gsap": "^3.9.1",
     "page-flip": "^2.0.7",
-    "quasar": "^2.3.3",
-    "swiper": "^7.0.3",
+    "quasar": "^2.0.0",
+    "swiper": "^7.4.1",
     "vue-i18n": "^9.0.0",
-    "vue-smooth-dnd": "^0.8.1",
-    "vue3-smooth-dnd": "^0.0.2",
     "vuex": "^4.0.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
-    "@quasar/app": "^3.2.3",
+    "@quasar/app": "^3.0.0",
+    "@types/node": "^12.20.21",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^7.0.0",
-    "eslint-webpack-plugin": "^2.4.0"
+    "eslint-plugin-vue": "^7.0.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
