--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
+    "test(original)": "echo \"No test specified\" && exit 0",
+    "test": "jest --watchAll --verbose"
   },
   "dependencies": {
     "@editorjs/delimiter": "^1.2.0",
@@ -20,6 +21,7 @@
     "@quasar/cli": "^1.2.2",
     "@quasar/extras": "^1.0.0",
     "aos": "^2.3.4",
+    "atropos": "^1.0.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "editorjs-drag-drop": "^1.0.1",
@@ -29,19 +31,21 @@
     "gsap": "^3.9.1",
     "page-flip": "^2.0.7",
     "quasar": "^2.0.0",
-    "swiper": "^7.4.1",
+    "swiper": "^8.0.0",
     "vue-i18n": "^9.0.0",
     "vuex": "^4.0.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app": "^3.0.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "jest": "^27.5.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
