--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@editorjs/underline": "^1.0.0",
     "@quasar/cli": "^1.2.2",
     "@quasar/extras": "^1.0.0",
+    "@types/dom-parser": "^0.1.1",
     "aos": "^2.3.4",
     "atropos": "^1.0.1",
     "axios": "^0.21.1",
@@ -29,6 +30,7 @@
     "editorjs-text-alignment-blocktune": "^1.0.3",
     "editorjs-undo": "^1.0.1",
     "gsap": "^3.9.1",
+    "handsfree": "^8.5.1",
     "page-flip": "^2.0.7",
     "quasar": "^2.0.0",
     "swiper": "^8.0.0",
